--- a/src/main/webapp/views/product/index.html
+++ b/src/main/webapp/views/product/index.html
@@ -1,11 +1,41 @@
+<div>
 <section class="content-header">
     <h1>
-        Blank page
-        <small>it all starts here</small>
+        Produtos
+        <small></small>
     </h1>
     <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#">Examples</a></li>
-        <li class="active">Blank page</li>
+        <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+        <li class="active">Produtos</li>
     </ol>
 </section>
+
+<section class="content">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="box box-primary">
+                <div class="box-header">
+                    <h3 class="box-title">Lista de Produtos</h3>
+                    <div class="box-tools pull-right">
+                        <a href="#/products/create" class="btn btn-primary">
+                            <i class="fa fa-plus"></i>
+                            Novo produto
+                        </a>
+                    </div>
+                </div>
+                <div class="box-body table-responsive no-padding">
+                    <table class="table table-hover">
+                        <tbody>
+                            <tr>
+                                <th>Nome</th>
+                                <th>Custo</th>
+                                <th>Preço</th>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+</div>
